test/compile-fail/scope-outside.as
let a = 20;

{
  let b = 30;
}

let c = b;
